styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Jersey+20+Charted&family=Lugrasimo&display=swap');


body{
    font-family: "Lugrasimo";
}

header{
    background-color: #1d4d72;
    display: flex;
    align-items: center;
    max-width: 90%;
    margin: 0 auto;
}

h1 {
    margin-right: 10px;
    color: white;
    text-align: center;
}

img{
    max-width: 100%;
    padding: 30px;
    margin-left: 10px;
    padding-right: 10px;
}

body{
    margin: 0 auto;
    max-width: 100%;
}

.profile{
    width: 20%;
    height: auto;
    display: block;
}

#menu{
    display: block;
    font-size: 2rem;
    font-weight: 700;
    text-decoration: none;
    padding: .5rem .75rem;
    background-color: #5558c1;
    color: #000;
    max-width: 90%;
    margin: 0 auto;
}

#menu::before{
    content: "\2261"; 
}

nav{
    background-color: black;
    margin: auto;
    max-width: 90%;
    
}

.navigation{
    list-style: none;
    margin: 0 auto;
    max-width: 600px;
}

.navigation li{
    display: none;
}

.navigation a{
    display: block;
    padding: .75rem;
    text-align: left;
    text-decoration: none;
    color: white;
    font-weight: 700;
    transition: 0.5s;
    font-size: clamp(1rem, 2vmin, 1.5rem);
}

.navigation a:hover, .navigation a:active{
    color: hotpink;
    background-color: skyblue;
}

nav ul li a.active::before{
    content: "🌠";
}

.show li{
    display: block;
}

#menu.show::before{
    content: "X";
}

nav ul {
    list-style-type: none;
}

nav a{
    display: block;
    color: white;
    text-align: center;
    padding: 1rem;
    text-decoration: none;
}

nav a:hover {
    border: 1px solid white;
}

.active{
    color: yellow;
}

main{
    margin: auto;
    max-width: 80%;
    align-self: center;
}

h2{
    margin: 0 auto;
    text-align: center;
    border-bottom: solid lightgray;
    padding-top: 2rem;
    margin-bottom: 1rem;
    grid-column-start: 1;
    grid-column-end: 3;
}

.card{
    border: solid lightgray;
    border-radius: .5em;
    margin-bottom: 20px;
    box-shadow: 0px 0px 10px darkgray;
    
}

h3{
    margin-top: 0;
    border-top-left-radius: .25em;
    border-top-right-radius: .25em;
    background-color: #1d4d72;
    color: white;
    text-align: center;
    padding: 1rem;
}

.card ul a{
    color: blue;
    text-decoration: underline;
}

h5{
    text-align: center;
}

footer{
    background-color: #1d4d72;
    margin: 0 auto;
    max-width: 90%;
}

p{
    color: white;
    text-align: center;
    padding-top: 20px;
    font-size: .75em;
}

#year{
    margin-bottom: -20px;
}

#lastModified{
    color: yellow;
}

.designHead{
    display: block;
}

.principles{
    font-size: 3vw;
    padding-top: 15px;
    /* padding-bottom: -10px; */
}

.name{
    font-size: 2vw;
    /* padding-top: -10px; */
    padding-bottom: 15px;
}

iframe{
    display: block;
    margin: 0 auto;
    width: 80%;
    height: 100%
}

.hero {
	margin: 10px auto;
	position: relative;
	border: 1px solid rgba(0,0,0,.1);
	height: 300px;
}

.hero img{
    width: 90%;
    height: auto;
    max-height: 200px;
    margin: auto;
    justify-self: center;
    border: solid black;
    border-radius: 15px;
    padding: 0px;
    display: block;
    
}

.herolabel {
	/* position: absolute;
	top: 30px;
	left: 40px;
	background: radial-gradient(#fff, #4D5B97);
	border: 1px solid rgba(0,0,0,.75);
	padding: 1.5rem;
	box-shadow: 0 0 3rem #fff;
	opacity: 0.75;
    max-width: 90%; */
    position: absolute;
    margin-right: -0.9vw;
    top: 25%;
    left: 25%;
    transform: translate(-50%, -50%);
    padding: 1vw 2vw;
    background-color: rgb(42, 91, 205, 50%);
    border: solid #111658;
    color: #1d4d72;
    text-align: center;
    text-decoration: none;
    font-weight: bolder;
    font-size: 3vw;
    border-radius: 5px;
}

.herolabel p {
	margin: 0;
	padding: .25rem;
	font-weight: 700;
	font-size: 1.5rem;
	font-family:"Lugrasimo", serif;
}

div#temp {
    padding: 10px;
    display: inline-flex;
    font-size: 2em;
    margin-top: 30px;
}

img#icon {
    float: left;
    padding-left: 20px;
}

div#description {
    display: inline-flex;
}

/* div#wind {
    font-size: 2vw;
}

div#humidity {
    font-size: 2vw;
} */

h4{
    text-align: center;
}

#description, #humidity, #wind, #chill{
    text-align: center;
    padding: 5px;
}

